# mini-stark

./: Cargo.toml  readme.md
src/: lib.rs  main.rs  maind.rs  prover.rs  verifier.rs
src/fields/: goldilocks.rs  mod.rs
src/merkle/: merkle.rs
