[package]
name = "mini-stark"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "prover"
path = "./src/main.rs"

[[bin]]
name = "verifier"
path = "./src/verifier.rs"

[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-ff-macros = "0.5.0"
ark-poly = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
base64 = "0.22.1"
rand = "0.8.5"
regex = "1.11.1"
serde_json = "1.0.141"
spongefish = { git = "https://github.com/arkworks-rs/spongefish",features = ["arkworks-algebra"] }
